feat(seo): improved seo

--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -5,14 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Enclosed - Send private and secure notes</title>
+    <meta name="title" content="Enclosed - Send Private and Secure Notes">
+    <meta name="description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
+ 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://enclosed.cc/">
+    <meta property="og:title" content="Enclosed - Send Private and Secure Notes">
+    <meta property="og:description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
+    <!-- <meta property="og:image" content="https://enclosed.cc/og-image.png"> -->
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://enclosed.cc/">
+    <meta property="twitter:title" content="Enclosed - Send Private and Secure Notes">
+    <meta property="twitter:description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
+    <!-- <meta property="twitter:image" content="https://enclosed.cc/twitter-image.png"> -->
+
+    <!-- Favicon and Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest"> 
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Structured Data (JSON-LD for rich snippets) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Enclosed",
+      "url": "https://enclosed.cc/",
+      "description": "Send private and secure notes with end-to-end encryption. Enclosed offers configurable security features like passwords, expiration times, and self-destruction after reading.",
+      "applicationCategory": "Utilities",
+      "operatingSystem": "Web",
+      "browserRequirements": "Requires JavaScript",
+      "image": "https://enclosed.cc/og-image.png",
+      "creator": {
+        "@type": "Organization",
+        "name": "Enclosed"
+      }
+    }
+    </script>
   </head>
   <body>
+    <h1 class="sr-only">Enclosed - Send Private and Secure Notes</h1>
+    <p class="sr-only">Enclosed is a secure platform for sending private notes. All notes are end-to-end encrypted with zero knowledge on the server side.</p>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
