--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -13,14 +13,14 @@
     <meta property="og:url" content="https://enclosed.cc/">
     <meta property="og:title" content="Enclosed - Send Private and Secure Notes">
     <meta property="og:description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
-    <!-- <meta property="og:image" content="https://enclosed.cc/og-image.png"> -->
+    <meta property="og:image" content="https://enclosed.cc/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://enclosed.cc/">
     <meta property="twitter:title" content="Enclosed - Send Private and Secure Notes">
     <meta property="twitter:description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
-    <!-- <meta property="twitter:image" content="https://enclosed.cc/twitter-image.png"> -->
+    <meta property="twitter:image" content="https://enclosed.cc/og-image.png">
 
     <!-- Favicon and Icons -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
