refactor(seo): removed aria-hidden on index headings

--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -49,8 +49,8 @@
     </script>
   </head>
   <body>
-    <h1 class="sr-only" aria-hidden="true">Enclosed - Send Private and Secure Notes</h1>
-    <p class="sr-only" aria-hidden="true">Enclosed is a secure platform for sending private notes. All notes are end-to-end encrypted with zero knowledge on the server side.</p>
+    <h1 class="sr-only">Enclosed - Send Private and Secure Notes</h1>
+    <p class="sr-only">Enclosed is a secure platform for sending private notes. All notes are end-to-end encrypted with zero knowledge on the server side.</p>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
