feat(auth): added authentication mecanism

--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Enclosed - Send private and secure notes</title>
+
+    <link rel="preload" href="/api/config" as="fetch" crossorigin="anonymous" />
+
     <meta name="title" content="Enclosed - Send Private and Secure Notes">
     <meta name="description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
  
