feat(index): added canonical url

--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -8,6 +8,9 @@
     <meta name="title" content="Enclosed - Send Private and Secure Notes">
     <meta name="description" content="Enclosed is a secure, end-to-end encrypted platform for sending private notes. Set expiration, passwords, and self-destruct options to keep your notes confidential.">
  
+    <link rel="author" href="humans.txt" />
+    <link rel="canonical" href="https://enclosed.cc/" />
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://enclosed.cc/">
