--- a/packages/app-client/index.html
+++ b/packages/app-client/index.html
@@ -33,6 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
+
     <!-- Structured Data (JSON-LD for rich snippets) -->
     <script type="application/ld+json">
     {
